# editor

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/gui/: MainWindow.cpp  MainWindow.h
